--- a/table.html
+++ b/table.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_table.css">
-    <title>table</title>
+    <title>Таблиця</title>
 </head>
 <body>
     <table border="1">
@@ -22,7 +22,7 @@
         <tr>
             <td>Середа</td>
             <td>8:00 - 16:00</td>
-            <td>12:00 - 13:00</td>
+            <td>12:00 - 14:00</td>
         </tr>
         <tr>
             <td>Четвер</td>
